Fixed:Styled logo Div to remove excess white spaces and patially styled Nav Div.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,12 @@
 
 
 #logo {
-    min-width: 50%;
+    min-width: 630px;
     width: 480px;
     background: url(/assets/images/logo-landscape.jpg);
     background-repeat: no-repeat;
     background-size: contain;
-    height: 200px;
+    height: 199px;
     display: inline-block;
     border: 5px solid gold;
 }
@@ -32,16 +32,16 @@
     margin-right: 30px;
 }
 
-#hero-image{
+#hero-image {
     background: url(/assets/images/dumbells-landscape.jpg);
     background-repeat: no-repeat;
     background-size: contain;
-    height: 900px;
+    height: 500px;
 }
 
-#footer{
-    background-color:black;
+#footer {
+    background-color: black;
     border: 5px solid gold;
     width: 100%;
-    height:200px
+    height: 200px
 }
